# bluesky

./: README.md
basic/: __init__.py  data.py  demo.ipynb  demo.py  evaluation.py  pipeline.py
mmm_ai/: .env.example  README.md  __init__.py  requirements.txt
mmm_ai/agents/: comparator.py  model_doctor.py
mmm_ai/app/: cli.py
mmm_ai/llm/: client.py  service_api.py
mmm_ai/src/mmm_ai/agents/: orchestrator.py  summarizer.py
mmm_ai/src/mmm_ai/app/: pipeline.py
mmm_ai/src/mmm_ai/config/: prompts.py  settings.py
mmm_ai/src/mmm_ai/llm/: __init__.py
mmm_ai/src/mmm_ai/tools/: __init__.py  exec_tools.py
mmm_ai/tests/: test_smoke.py
mmm_ai/tools/: diagnostics.py
precision/: README.md  __init__.py  pyproject.toml
precision/precision/: __init__.py  adstock.py  constants.py  controls.py  ensemble.py  hierarchy.py  posterior.py  priors.py  psis.py  roi.py  sampling.py  scaling.py  summaries.py
precision/scripts/: demo_run.py
precision/tests/: __init__.py  test_adstock.py  test_controls.py  test_ensemble.py  test_hierarchy.py  test_mmm_pipeline.py  test_posterior.py  test_priors.py  test_psis.py  test_roi.py  test_sampling.py  test_scaling.py  test_scaling_and_loglik.py  test_summaries.py
