[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "precision"
version = "0.1.0"
description = "Bayesian MMM with TensorFlow Probability"
authors = [{ name = "Precision Team" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "tensorflow>=2.12",
    "tensorflow-probability>=0.20",
]

[project.optional-dependencies]
test = ["pytest"]
